# mpdify

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/aspotify/: handler.rs
src/handlers/: client.rs  mod.rs
src/handlers/artwork/: extract.rs  handler.rs  mod.rs
src/handlers/aspotify/: auth.rs  context.rs  handler.rs  mod.rs  playback.rs  playback_watcher.rs  playlist.rs  song.rs  status.rs  time.rs  utils.rs
src/handlers/mpris/: client.rs  handler.rs  mod.rs  watcher.rs
src/listeners/: mod.rs
src/listeners/http/: listener.rs  mod.rs  responses.rs
src/listeners/mpd/: connection.rs  idle.rs  input.rs  listener.rs  mod.rs  types.rs
src/mpd/: commands.rs  handlers.rs  inputtypes.rs  listener.rs  mod.rs  outputtypes.rs  types.rs
src/mpd_protocol/: commands.rs  handlers.rs  input.rs  mod.rs  output.rs  path.rs  ser.rs  types.rs
src/mpris/: handler.rs  mod.rs  types.rs  watcher.rs
src/util/: idle.rs  mod.rs  settings.rs
tests/: mpd_listener.rs
