[package]
name = "mpdify"
version = "0.1.0"
authors = ["Xavier Vello <xavier.vello@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
config = { version = "0.10", default-features = false }
enumset = "1.0"

tokio = { version = "0.3", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.5", features = ["time"] }

hyper = "0.13"
serde_json = "1.0"

dbus = "0.9"
dbus-tokio = "0.6"
tokio-compat-02 = "0.1"

serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
serde_yaml = "0.8"
serde_fmt = "1.0"

regex = "1.4.2"
lazy_static = "1.4.0"

aspotify = { git = "https://github.com/xvello/aspotify.git", branch = "mpdify" }
chrono = { version = "0.4" }