[package]
authors = ["Xavier Vello <xavier.vello@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
name = "mpdify"
readme = "README.md"
repository = "https://github.com/xvello/mpdify"
version = "0.1.0"

[dependencies]
aspotify = "0.7"
chrono = { version = "0.4" }
config = { version = "0.10", default-features = false }
enumset = "1.0"
erased-serde = "0.3"
futures = "0.3"
hyper = { version = "0.14.2", features = ["http1", "server"] }
log = "0.4"
lru-disk-cache = { git = "https://github.com/xvello/lru-disk-cache" }
pretty_env_logger = "0.4"
reqwest = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_fmt = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.15"
strum = { version = "0.20", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0.1", features = ["full"] }
tokio-stream = { version = "0.1.1", features = ["io-util"] }
tokio-util = { version = "0.6", features = ["time"] }

### https://github.com/Lymia/enumset/pull/18
[patch.crates-io.enumset_derive]
git = "https://github.com/ocboogie/enumset"
branch = "span-fix"
